<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/ll_setting"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/settingBgColor"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <TextView
        android:id="@+id/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/setting_normal"
        android:textColor="?attr/clockTextColor"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        >

        <LinearLayout
            android:id="@+id/ll_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/cardBgColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_cache"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_cache"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorAccent"
                    android:checked="true"/>
            </LinearLayout>

            <include layout="@layout/view_line_05"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_image"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_image"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorAccent"/>
            </LinearLayout>

            <include layout="@layout/view_line_05"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_night"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_night"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/text_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/setting_other"
        android:textColor="?attr/clockTextColor"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/cardBgColor"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/ll_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/cardBgColor"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_feedback"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_feedback"/>
            </LinearLayout>

            <include layout="@layout/view_line_05"/>

            <LinearLayout
                android:id="@+id/ll_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_clear"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_clear"/>

                <TextView
                    android:id="@+id/tv_setting_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="缓存大小：200kb"/>
            </LinearLayout>

            <include layout="@layout/view_line_05"/>

            <LinearLayout
                android:id="@+id/ll_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_update"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_update"/>

                <TextView
                    android:id="@+id/tv_setting_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="当前版本号：v1.0"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>